:white_check_mark:  should_insert_position